# bambu-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.ja.md  README.md  RELEASING.md  about.toml  build.rs  result.json  rust-toolchain.toml
.claude/skills/bambu-print/: SKILL.md
.claude/skills/bambu-print/evals/: evals.json
.claude/skills/bambu-print/evals/fixtures/: status-no-abs.json  status-paused-no-source.json  status-petg-in-slot3.json  status-pla-external-only.json
.claude/skills/bambu-print/scripts/: resolve_source.py
.claude/skills/bambu-slice/: SKILL.md
.claude/skills/bambu-slice/evals/: evals.json
.claude/skills/bambu-slice/scripts/: slice.py
.claude/skills/bambu-timelapse/: SKILL.md
.claude/skills/bambu-timelapse/scripts/: _tuning.py  live_mine_smooth.py  mine_smooth.py  select_smooth.py  slice_smooth.py  test_live_mine_smooth.py  test_mine_smooth.py  test_select_smooth.py  tuning.example.json
.claude/skills/color-universal-design/: SKILL.md  evals.json
.github/workflows/: ci.yml  release.yml
docs/: protocol.md  slicing.md
examples/: fetch_status.rs
src/: camera.rs  captures.rs  cli.rs  client.rs  config.rs  ftp.rs  lib.rs  main.rs  park.rs  tls.rs
src/core/: capability.rs  command.rs  fake.rs  firmware.rs  hms.rs  mod.rs  model.rs  park.rs  project.rs  report.rs  safety.rs  session.rs  stage.rs  start.rs  status.rs  timelapse.rs  verify.rs  version.rs
src/dashboard/: assets.rs  live.rs  mod.rs  server.rs
src/server/: api.rs  assets.rs  camera.rs  control.rs  files.rs  live.rs  mod.rs  park.rs  start.rs  stream_record.rs  timelapse.rs
tests/: cli.rs
tests/fixtures/: README.md  get_version-a1mini.json  pushall-n1-idle.json
tools/: README.md  capture_get_version.py  capture_pushall.py  capture_report_delta.py
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web/e2e/: dashboard.spec.ts
web/e2e/fixtures/: park-camera.json
web/src/: App.tsx  app.css  cameras.ts  control.ts  format.ts  timelapse.ts  types.ts  useControl.ts  useStatus.ts  useTheme.ts
web/src/bindings/: Ams.ts  AmsTray.ts  AmsUnit.ts  DeviceError.ts  Filament.ts  HmsAlert.ts  Ipcam.ts  LightReport.ts  Online.ts  PrinterStatus.ts  Upgrade.ts  Upload.ts
web/src/components/: AmsSection.tsx  CameraSection.tsx  Controls.tsx  ErrorBoundary.tsx  FilesSection.tsx  FooterSection.tsx  Header.tsx  HealthSection.tsx  JobSection.tsx  MachineSection.tsx  OverviewSection.tsx  ParkPlayer.tsx  TempSection.tsx  Viewer3D.tsx  widgets.tsx
