[package]
name = "bambu-rs"
version = "0.0.0"
edition = "2024"
# MSRV: 1.88.0 — the code uses `let` chains (`if let … && let …`), stabilised in
# 1.88. Enforced by the `msrv` CI job. (Bumping this may free newer deps, e.g.
# zip 8.x needs 1.88.)
rust-version = "1.88.0"
description = "Clean-room, agent-friendly library and CLI for Bambu Lab 3D printers (LAN mode)"
license = "MIT"
repository = "https://github.com/sksat/bambu-rs"
readme = "README.md"
keywords = ["bambulab", "3d-printing", "mqtt", "cli", "printer"]
categories = ["command-line-utilities", "api-bindings"]

# Reusable library is the first-class artifact; the `bambu` CLI is its first consumer.
[lib]
name = "bambu_rs"
path = "src/lib.rs"

[[bin]]
name = "bambu"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# CLI-only dependencies (clap, etc.) are gated here so library-only consumers don't pull them.
cli = ["dep:clap"]
# The embedded web dashboard (HTTP server + embedded SPA). Off by default so
# library/CLI-only users pull no web server. Adds the extra tokio features the
# server needs (the base tokio is rt/time/macros only).
dashboard = [
    "cli",
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "dep:rust-embed",
    "dep:base64",
    "dep:rand",
    "tokio/rt-multi-thread",
    "tokio/sync",
    "tokio/net",
    "tokio/process",
]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"], optional = true }
axum-extra = { version = "0.12.6", features = ["typed-header"], optional = true }
base64 = { version = "0.22.1", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
md-5 = "0.11.0"
native-tls = "0.2.18"
rand = { version = "0.10.1", optional = true }
rumqttc = { version = "0.25.1", default-features = false, features = ["use-rustls"] }
rust-embed = { version = "8.11.0", optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# `deprecated` is needed for connect_secure_implicit — Bambu's FTPS is *implicit*
# on port 990 (TLS from the start), not explicit AUTH-TLS.
suppaftp = { version = "8.0.4", features = ["native-tls", "deprecated"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time", "macros"] }
toml = "1.1.2"
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.11", features = ["cors", "trace", "compression-gzip"], optional = true }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.2.2"
axum-test = "20.1.0"
predicates = "3.1.4"
proptest = "1.11.0"
