[package]
name = "bambu-rs"
version = "0.0.0"
edition = "2024"
# MSRV: 1.88.0 — the code uses `let` chains (`if let … && let …`), stabilised in
# 1.88. Enforced by the `msrv` CI job. (Bumping this may free newer deps, e.g.
# zip 8.x needs 1.88.)
rust-version = "1.88.0"
description = "Clean-room, agent-friendly library and CLI for Bambu Lab 3D printers (LAN mode)"
license = "MIT"
repository = "https://github.com/sksat/bambu-rs"
readme = "README.md"
keywords = ["bambulab", "3d-printing", "mqtt", "cli", "printer"]
categories = ["command-line-utilities", "api-bindings"]

# Reusable library is the first-class artifact; the `bambu` CLI is its first consumer.
[lib]
name = "bambu_rs"
path = "src/lib.rs"

[[bin]]
name = "bambu"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "server"]
# CLI-only dependencies (clap, etc.) are gated here so library-only consumers don't pull them.
cli = ["dep:clap"]
# The monitoring + control HTTP API server (axum). On by default; a library-only
# consumer can drop it with `default-features = false`. Adds the extra tokio
# features the server needs (the base tokio is rt/time/macros only).
server = [
    "cli",
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "dep:futures-util",
    "tokio/rt-multi-thread",
    "tokio/sync",
    "tokio/net",
    "tokio/process",
    "tokio/fs",
    "tokio/io-util",
]
# The embedded web dashboard SPA, served by `bambu serve` when enabled. Builds on
# the API server and embeds `web/dist/` via rust-embed.
dashboard = ["server", "dep:rust-embed"]
ts-rs = ["dep:ts-rs"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"], optional = true }
axum-extra = { version = "0.12.6", features = ["typed-header"], optional = true }
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
futures-util = { version = "0.3.31", default-features = false, optional = true }
md-5 = "0.11.0"
native-tls = "0.2.18"
rumqttc = { version = "0.25.1", default-features = false, features = ["use-rustls"] }
rust-embed = { version = "8.11.0", optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# `deprecated` is needed for connect_secure_implicit — Bambu's FTPS is *implicit*
# on port 990 (TLS from the start), not explicit AUTH-TLS.
suppaftp = { version = "8.0.4", features = ["native-tls", "deprecated"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time", "macros"] }
toml = "1.1.2"
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.11", features = ["cors", "trace", "compression-gzip"], optional = true }
ts-rs = { version = "12", optional = true }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.2.2"
axum-test = { version = "20.1.0", features = ["ws"] }
predicates = "3.1.4"
proptest = "1.11.0"
