[package]
name = "bambu-rs"
version = "0.0.0"
edition = "2024"
# MSRV: 1.88.0 — the code uses `let` chains (`if let … && let …`), stabilised in
# 1.88. Enforced by the `msrv` CI job. (Bumping this may free newer deps, e.g.
# zip 8.x needs 1.88.)
rust-version = "1.88.0"
description = "Clean-room, agent-friendly library and CLI for Bambu Lab 3D printers (LAN mode)"
license = "MIT"
repository = "https://github.com/sksat/bambu-rs"
readme = "README.md"
keywords = ["bambulab", "3d-printing", "mqtt", "cli", "printer"]
categories = ["command-line-utilities", "api-bindings"]

# Reusable library is the first-class artifact; the `bambu` CLI is its first consumer.
[lib]
name = "bambu_rs"
path = "src/lib.rs"

[[bin]]
name = "bambu"
path = "src/main.rs"
required-features = ["cli"]

# cargo-binstall: install the prebuilt release binary instead of compiling.
# Asset names come from the release workflow; `{ name }` = crate "bambu-rs",
# `{ bin }` = binary "bambu". Unix assets are .tar.gz (tgz), Windows is .zip.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.tar.gz"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.zip"
pkg-fmt = "zip"

[features]
default = ["cli", "server"]
# CLI-only dependencies (clap, etc.) are gated here so library-only consumers don't pull them.
cli = ["dep:clap"]
# The monitoring + control HTTP API server (axum). On by default; a library-only
# consumer can drop it with `default-features = false`. Adds the extra tokio
# features the server needs (the base tokio is rt/time/macros only).
server = [
    "cli",
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "dep:futures-util",
    "tokio/rt-multi-thread",
    "tokio/sync",
    "tokio/net",
    "tokio/process",
    "tokio/fs",
    "tokio/io-util",
    "dep:ureq",
]
# The embedded web dashboard SPA, served by `bambu serve` when enabled. Builds on
# the API server and embeds `web/dist/` via rust-embed.
dashboard = ["server", "dep:rust-embed"]
ts-rs = ["dep:ts-rs"]
# Embed OSS license notices (via arkedge/notalawyer + cargo-about) into the
# binary, exposing a `--license-notice` flag. Off by default and used only for
# release builds: enabling it makes build.rs require `cargo-about` on the build
# host, so normal dev/CI builds and `cargo install` never need it.
license-notice = ["cli", "dep:notalawyer", "dep:notalawyer-clap", "dep:notalawyer-build"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"], optional = true }
axum-extra = { version = "0.12.6", features = ["typed-header"], optional = true }
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
futures-util = { version = "0.3.31", default-features = false, optional = true }
md-5 = "0.11.0"
native-tls = "0.2.18"
# License-notice embedding (release only, behind the `license-notice` feature).
notalawyer = { version = "0.2.0", optional = true }
notalawyer-clap = { version = "0.2.0", optional = true }
rumqttc = { version = "0.25.1", default-features = false, features = ["use-rustls"] }
rust-embed = { version = "8.11.0", optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# `deprecated` is needed for connect_secure_implicit — Bambu's FTPS is *implicit*
# on port 990 (TLS from the start), not explicit AUTH-TLS.
suppaftp = { version = "8.0.4", features = ["native-tls", "deprecated"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time", "macros"] }
toml = "1.1.2"
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.11", features = ["cors", "trace", "compression-gzip"], optional = true }
# Small blocking HTTP client used by `bambu serve` to proxy an external IP camera
# (plain HTTP, so the default-feature TLS stack is dropped to keep the dep light).
ureq = { version = "2", default-features = false, optional = true }
ts-rs = { version = "12", optional = true }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

# Release binaries are stripped (rustc-side, so it works for every cross target
# uniformly without a per-target `strip` tool).
[profile.release]
strip = true

[build-dependencies]
# Generates the embedded license notice (shells out to cargo-about). Optional —
# only pulled in (and only invoked by build.rs) under the `license-notice` feature.
notalawyer-build = { version = "0.2.0", optional = true }

[dev-dependencies]
assert_cmd = "2.2.2"
axum-test = { version = "20.1.0", features = ["ws"] }
predicates = "3.1.4"
proptest = "1.11.0"
